--- a/web/src/main/webapp/templates/Networks.html
+++ b/web/src/main/webapp/templates/Networks.html
@@ -9,8 +9,8 @@
 
 <div class="page-actions">
     <ul>
-        <li><a ng-click="addNetwork()"><i class="icon-plus-sign"></i>Add Network</a></li>
-        <li><a ng-click="addGuestNetwork()"><i class="icon-plus-sign"></i>Add Guest Network</a></li>
+        <li><a ng-click="addNetwork('network')"><i class="icon-plus-sign"></i>Add Network</a></li>
+        <li><a ng-click="addNetwork('guestnetwork')"><i class="icon-plus-sign"></i>Add Guest Network</a></li>
     </ul>
 </div>
 
