--- a/web/src/main/webapp/templates/AccessPointList.html
+++ b/web/src/main/webapp/templates/AccessPointList.html
@@ -11,7 +11,7 @@
     <div class="span12">
         <div class="page-actions">
             <ul>
-                <li><a ng-href="#/site"><i class="icon-plus-sign"></i>Add Access Points</a></li>
+                <li><a ng-click="addAccessPoints()"><i class="icon-plus-sign"></i>Add Access Points</a></li>
             </ul>
         </div>
     </div>
