--- a/web/src/main/webapp/templates/AccessPointList.html
+++ b/web/src/main/webapp/templates/AccessPointList.html
@@ -11,7 +11,7 @@
     <div class="span12">
         <div class="page-actions">
             <ul>
-                <li><a ng-click="addAccessPoints()"><i class="icon-plus-sign"></i>Add Access Points</a></li>
+                <li><a ng-click="addAccessPoints()"><i class="icon-plus-sign"></i>Edit Access Points</a></li>
             </ul>
         </div>
     </div>
@@ -62,31 +62,33 @@
     <th><a ng-click="paginator.setOrder('tx_bytes')">Download<i ng-class="paginator | sortClass:'tx_bytes'"></i></a></th>
     <th><a ng-click="paginator.setOrder('rx_bytes')">Upload<i ng-class="paginator | sortClass:'rx_bytes'"></i></a></th>
     <th><a ng-click="paginator.setOrder('cfgversion')">Version<i ng-class="paginator | sortClass:'cfgversion'"></i></a></th>
-    <th><a>Upgrade</i></a></th>
+    <th><a>Network</a></th>
+    <th><a>Upgrade</a></th>
     <th class="no-hover"></th>
 </tr>
 </thead>
 <tbody>
 <tr ng-repeat="accessPoint in accessPoints | filter: filter | storeItemCount: paginator.updateTotalItems | orderBy: paginator.orderBy | slice:(paginator.currentPage-1)*20:20">
-    <td><a ng-click="forgetDevice()"><i class="icon-trash"></i></a></td>
+    <td><a ng-click="forgetDevice(accessPoint.mac)" ng-show="accessPoint.adopted"><i class="icon-trash"></i></a></td>
     <td>{{accessPoint.name}}</td>
     <td>{{accessPoint.model}}</td>
     <td>
-        <a ng-show="accessPoint.state == 1" ng-href="#/device/{{accessPoint.id}}">{{accessPoint.mac}}</a>
+        <a ng-show="accessPoint.state == 1" ng-href="#/site/{{site_id}}/device/{{accessPoint.id}}">{{accessPoint.mac}}</a>
         <span ng-hide="accessPoint.adopted">{{accessPoint.mac}}</span>
     </td>
     <td>{{accessPoint.ip}}</td>
     <td>{{accessPoint | deviceStatus}}</td>
-    <td>uptime</td>
+    <td>{{accessPoint.uptime | uptime}}</td>
     <td>{{accessPoint.user_num_sta}}</td>
     <td>{{accessPoint.tx_bytes | bytes}}</td>
     <td>{{accessPoint.rx_bytes | bytes}}</td>
     <td>{{accessPoint.version || ''}}</td>
-    <td><a ng-class="icon-upload"></a></td>
+    <td><a href="">Activity</a></td>
+    <td><a ng-click="upgradeDevice(accessPoint)"><i class="icon-upload"></i></a></td>
     <td>
         <div class="dropdown settings" ng-hide="accessPoint.state > 2"><a href="#" data-toggle="dropdown" class="dropdown-toggle icons"><i class="icon-cog"></i><i class="icon-caret-down"></i></a>
             <ul role="menu" aria-labelledby="dropdownMenu" class="dropdown-menu pull-right">
-                <li ng-show="accessPoint.state == 1"><a ng-href="#/device/{{accessPoint.id}}">Edit Device</a></li>
+                <li ng-show="accessPoint.state == 1"><a ng-href="#/site/{{site_id}}/device/{{accessPoint.id}}">Edit Device</a></li>
                 <li ng-show="accessPoint.state == 2"><a ng-click="adoptDevice(accessPoint)">Adopt Device</a></li>
             </ul>
         </div>
