--- a/web/src/main/webapp/templates/Site.html
+++ b/web/src/main/webapp/templates/Site.html
@@ -1,6 +1,6 @@
 <div class="row-fluid page-title">
     <div class="span12">
-        <h1 class="content-title">Manage {{original.friendly_name}} </h1>
+        <h1 class="content-title">Site Access Points </h1>
         <ul class="crumbs">
             <li><a href="#/devices">Access Points</a></li>
             <li><a style="cursor:pointer;">Manage {{original.friendly_name}}</a></li>
@@ -15,8 +15,8 @@
             <div class="container-fluid">
                 <div class="row-fluid">
                     <div class="span12">
-                            <h2>Assigned Devices</h2>
-                            <p>Provide the list of device MACs for this location. Provide each on their own line.</p>
+                            <h2>Site Access Point MACs</h2>
+                            <p>Provide the list of device MACs for this site. Provide each on their own line.</p>
                         <div class="row-fluid">
                             <div class="span8 offset2">
                                 <form name="form" class="form-horizontal" novalidate>
