--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -200,7 +200,7 @@
 </div>
 </div>
 <div class="update-controls" ng-show="isNew || isDirty()">
-<button class="btn btn-primary" ng-disabled="form.$invalid" ng-click="update()">Update</button>
+<button class="btn btn-primary" ng-disabled="form.$invalid" ng-click="activeItem=='Details' ? updateSite() : update()">Update</button>
 <button class="btn btn-link clear-form" ng-hide="isNew" ng-click="reset()">Discard Changes</button>
 </div>
 </div>
