--- a/web/src/main/webapp/templates/User.html
+++ b/web/src/main/webapp/templates/User.html
@@ -2,7 +2,7 @@
     <div class="span12">
         <h1 class="content-title">User Details for {{original.mac}}</h1>
         <ul class="crumbs">
-            <li><a href="#/users">Connected Devices</a></li>
+            <li><a href="#/users">Connected User Devices</a></li>
             <li><a style="cursor:pointer;">User Details for {{original.mac}}</a></li>
         </ul>
     </div>
@@ -17,10 +17,6 @@
 
 <div class="row-fluid">
     <div class="span12">
-        <ul class="content-sidebar">
-            <li><a class="active"><i class="icon-asterisk"></i>User Details</a></li>
-        </ul>
-        <div class="content-pane multi">
         <div class="content">
             <div class="container-fluid">
                 <div class="row-fluid">
