--- a/web/src/main/webapp/templates/Users.html
+++ b/web/src/main/webapp/templates/Users.html
@@ -125,7 +125,7 @@
             <tbody>
             <tr ng-repeat="user in users | filter: filter | storeItemCount: paginator.updateTotalItems | orderBy: paginator.orderBy | slice:(paginator.currentPage-1)*20:20">
                 <td>{{user.hostname}}</td>
-                <td><a ng-href="#/site/{{site_id}}/user/{{user.id}}">{{user.mac}}</a></td>
+                <td><a ng-href="#/user/{{user.id}}">{{user.mac}}</a></td>
                 <td>{{user.essid}}</td>
                 <td ng-show="showApMac">{{user.ap}}</td>
                 <td>{{user.is_connected ? "Connected" : "Disconnected"}}</td>
