--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -42,7 +42,7 @@
                                                 Site name<i class="icon-asterisk required"></i>
                                             </label>
                                             <div class="controls">
-                                                <input type="text" id="friendly_name" name="friendly_name" placeholder="Provide a name..." ng-model="settings.friendly_name" required>
+                                                <input type="text" id="friendly_name" name="friendly_name" placeholder="Provide a name..." ng-model="site.friendly_name" required>
                                                 <i ng-hide="form.friendly_name.$error.required" class="icon-ok-sign active"></i>
                                                 <div ng-show="form.friendly_name.$error.required" class="tip help">Name is required</div>
                                             </div>
@@ -52,7 +52,7 @@
                                                 Email for Alerts<i class="icon-asterisk required"></i>
                                             </label>
                                             <div class="controls">
-                                                <input type="text" id="alert_email" name="alert_email" placeholder="Provide an email address..." ng-model="settings.alert_email" required pattern="email">
+                                                <input type="text" id="alert_email" name="alert_email" placeholder="Provide an email address..." ng-model="site.alert_email" required pattern="email">
                                                 <i ng-hide="form.alert_email.$error.required" class="icon-ok-sign active"></i>
                                                 <div ng-show="form.alert_email.$error.required" class="tip help">An email is required</div>
                                             </div>
@@ -60,31 +60,31 @@
                                         <div class="control-group">
                                             <label for="address" class="control-label">Account Number</label>
                                             <div class="controls">
-                                                <input type="text" id="account" name="account" placeholder="Provide an account number..." ng-model="settings.account">
+                                                <input type="text" id="account" name="account" placeholder="Provide an account number..." ng-model="site.account">
                                             </div>
                                         </div>
                                         <div class="control-group">
                                             <label for="address" class="control-label">Address</label>
                                             <div class="controls">
-                                                <input type="text" id="address" name="address" placeholder="Provide an address..." ng-model="settings.address1">
+                                                <input type="text" id="address" name="address" placeholder="Provide an address..." ng-model="site.address1">
                                             </div>
                                         </div>
                                         <div class="control-group">
                                             <label for="city" class="control-label">City</label>
                                             <div class="controls">
-                                                <input type="text" id="city" name="city" placeholder="Provide a city..." capitalize-first ng-model="settings.city">
+                                                <input type="text" id="city" name="city" placeholder="Provide a city..." capitalize-first ng-model="site.city">
                                             </div>
                                         </div>
                                         <div class="control-group">
                                             <label for="state" class="control-label">State</label>
                                             <div class="controls">
-                                                <input type="text" id="state" name="state" placeholder="Provide a state..." capitalize-state ng-model="settings.state">
+                                                <input type="text" id="state" name="state" placeholder="Provide a state..." capitalize-state ng-model="site.state">
                                             </div>
                                         </div>
                                         <div class="control-group">
                                             <label for="zip" class="control-label">Zip</label>
                                             <div class="controls">
-                                                <input type="text" id="zip" name="zip" placeholder="Provide a zip..." ng-model="settings.zip">
+                                                <input type="text" id="zip" name="zip" placeholder="Provide a zip..." ng-model="site.zip">
                                             </div>
                                         </div>
                                     </div>
